[tool.poetry]
name = "parkhero"
version = "0.1.0"
description = "parking lot platform"
authors = ["huangxiang <huangxiang1992@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
